--- a/All_Serach.ipynb
+++ b/All_Serach.ipynb
@@ -2,39 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 2 0 5 7\n",
-      "7 4 3 5 7\n",
-      "found\n",
-      "None\n"
+      "Found and index is 2\n"
      ]
     }
    ],
    "source": [
-    "#BST Binary search tree\n",
+    "#BST Binary search tree  O(logn)\n",
     "\n",
     "def binarySearch(a,x,l,r):\n",
     "    if(l>r):\n",
     "        return -1\n",
     "    mid=(l+r)//2\n",
-    "    print(a[mid],mid,l,r,x)\n",
     "    if x==a[mid]:\n",
-    "        print('found')\n",
-    "        return 7\n",
+    "        return mid\n",
     "    elif a[mid]>x:\n",
-    "        binarySearch(a,x,l,mid-1) #(,,3,5)\n",
+    "        return binarySearch(a,x,l,mid-1)\n",
     "    else:\n",
-    "        binarySearch(a,x,mid+1,r)\n",
+    "        return binarySearch(a,x,mid+1,r)\n",
     "\n",
     "a=[1,4,5,6,7,8]\n",
     "\n",
-    "print(binarySearch(a,7,0,len(a)-1))\n"
+    "result =binarySearch(a,5,0,len(a)-1)\n",
+    "print('Found and index is '+  str(result) if result>-1 else 'Not found' )\n"
    ]
   }
  ],
